2009-09-25  Martin Thuresson  <martint@google.com>

	Update soruces to make alpha and arm targets compile cleanly with
	-Wc++-compat:
	* ecoff.c: Add casts.
	* ecofflink.c: Add casts.
	* elf64-alpha.c: Add casts.
	(struct alpha_elf_got_entry, struct alpha_elf_reloc_entry): Move
	to top level.
	(SKIP_HOWTO): Use enum name.
	* elf32-arm.c: Add casts.
	(elf32_arm_vxworks_bed): Update code to avoid multiple
	declarations.
	(struct map_stub): Move to top level.

2009-09-24  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/10630
	* elflink.c (elf_link_output_extsym): Turn off visibility on
	local symbol.
	(bfd_elf_final_link): Turn off visibility on dynamic local
	symbol.

2009-09-24  Alan Modra  <amodra@bigpond.net.au>

	PR binutils/10654
	* dwarf2.c (lookup_address_in_line_info_table): Remove workaround
	for invalid location lists generated by gcc-2.95 and Intel 6.0 C++.
	Remove "function" parm, adjust caller.

2009-09-23  Matt Rice  <ratmice@gmail.com>

	* bfd-in.h (bfd_elf_size_dynamic_sections): Add audit and depaudit
	arguments.
	* elflink.c (bfd_elf_size_dynamic_sections): Generate DT_AUDIT,
	DT_DEPAUDIT from audit/depaudit arguments.
	(elf_finalize_dynstr): Finalize DT_AUDIT and DT_DEPAUDIT strtab entries.
	(elf_link_add_object_symbols): Set dt_audit target data when finding a
	DT_AUDIT.
	* bfd-in2.h: Regenerate.
	* bfd-elf.h: Add dt_audit to elf_obj_tdata, and elf_dt_audit macro.

2009-09-23  Jie Zhang  <jie.zhang@analog.com>

	* elf32-bfin.c (_bfinfdpic_size_got_plt): Make sure empty
	.rel.plt and .plt sections are removed.
	(elf32_bfinfdpic_size_dynamic_sections): Remove empty .dynbss
	section.  Remove the duplicated removing of empty .rel.plt
	section.

2009-09-21  Richard Sandiford  <rdsandiford@googlemail.com>

	* elf-eh-frame.c (_bfd_elf_write_section_eh_frame): Extend previous
	patch to handle the new personality relaxation.

2009-09-21  Richard Sandiford  <rdsandiford@googlemail.com>

	* elf-eh-frame.c (make_pc_relative): New function.